# expense-tracker-backend

./: FRONTEND_API.md  pyproject.toml
app/: auth.py  main.py  models.py  storage.py
app/routers/: auth.py  categories.py  dashboard.py  expenses.py
data/: categories.json  expenses.json  users.json
